<resources>
    <string name="app_name">QuizApp</string>
    <string name="question_text_view_loading">Loading question…</string>
    <string name="question_number">Question # %d/%d</string>
    <string name="quiz_score">Score: %d</string>
    <string name="difficulty_label">Difficulty: %s</string>
    <string name="welcome_banner_text">Welcome to the Quiz App!</string>
    <string name="quiz_settings_difficulty_label">Select your difficulty:</string>
    <string name="quiz_settings_num_questions_label">Enter # of questions:</string>
    <string name="start_quiz_button">Start Quiz !</string>
    <string name="num_questions_input_hint">Enter Number</string>
    <string name="num_questions_input_error">Number must be between 1 and 25</string>
    <string-array name="difficulty_options">
        <item>Any</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="category_options">
        <item>Any Category</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals &amp; Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science &amp; Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime &amp; Manga</item>
        <item>Entertainment: Cartoon &amp; Animations</item>
    </string-array>
    <string name="quiz_completed">Quiz Completed!</string>
    <string name="your_score">Your Score: %1$d</string>
    <string name="restart_quiz">Replay Quiz</string>
    <string name="return_home">Return Home</string>
    <string name="exit">Exit</string>

</resources>