<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/summaryCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:background="@color/card_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:id="@+id/summaryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_completed"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/summaryScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_score"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/restartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restart_quiz"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/returnHomeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_home"
                android:layout_marginTop="16dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
