<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context=".MainActivity">

    <!-- Welcome Banner -->
    <TextView
    android:id="@+id/welcomeBannerView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="24sp"
    android:text="@string/welcome_banner_text"
    android:textAlignment="center"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="30dp" />

    <!-- Quiz Settings Layout -->
    <LinearLayout
    android:id="@+id/quizSettingsLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="30dp"
    android:layout_below="@id/welcomeBannerView"
    android:layout_centerHorizontal="true">

    <!-- Labels Layout -->
    <LinearLayout
        android:id="@+id/quizSettingsLabelsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/quizSettingsDifficultyLabelView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/quiz_settings_difficulty_label"
            android:textAlignment="center"
            android:labelFor="@id/quizSettingsDifficultySelectSpinner"/>

        <TextView
            android:id="@+id/quizSettingsNumQuestionsLabelView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/quiz_settings_num_questions_label"
            android:textAlignment="center"
            android:labelFor="@id/quizSettingsNumQuestionsInput"/>

    </LinearLayout>

    <!-- Inputs Layout -->
    <LinearLayout
        android:id="@+id/quizSettingsInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Spinner
            android:id="@+id/quizSettingsDifficultySelectSpinner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:spinnerMode="dropdown"
            android:layout_weight="1"
            android:entries="@array/difficulty_options"/>

        <EditText
            android:id="@+id/quizSettingsNumQuestionsInput"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints="10"
            android:inputType="number"
            android:gravity="center"/>

    </LinearLayout>

    <!-- Submit Button -->
    <Button
        android:id="@+id/quizSettingsSubmitButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/start_quiz_button"
        android:onClick="handleStartQuizButtonClick"/>

    </LinearLayout>
</RelativeLayout>
